fixed endless scrolling issue on mobile view

--- a/src/Hero.scss
+++ b/src/Hero.scss
@@ -5,6 +5,7 @@ $myfont: Atma;
     color: #dddddd;
     width: 100%;
     height: auto;
+    overflow: hidden;
     // background-color: white;
   }
 
@@ -63,6 +64,11 @@ $myfont: Atma;
 
   /* ............................................ MOBILE VIEW ---- max-width: 500px */
   @media only screen and (max-width: 700px) {
+
+    #hero {
+      padding-bottom: 200px;
+    }
+
     .mobile-footer-background {
       display: block;
       position: fixed;
